# systeminformer

./: SystemInformer.sln
SystemInformer/: SystemInformer.vcxproj  SystemInformer.vcxproj.filters  main.c  mainwnd.c
SystemInformer/include/: ksisup.h  mainwnd.h
env_search/: env_search.cpp  env_search.vcxproj  env_search.vcxproj.filters
phlib-sys/: Cargo.toml  build.rs
