[package]
name = "phlib-sys"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust FFI bindings to the phlib library"
repository = "https://github.com/Winsider/SystemInformer"
build = "build.rs"

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"
bindgen = "0.59"
glob = "0.3"